--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,14 @@
 # should be updated accordingly.
 
 # Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/shoots"
+POSTGRES_URL="postgresql://postgres:password@localhost:5432/shoots"
+POSTGRES_PRISMA_URL="something"
+POSTGRES_URL_NO_SSL="something"
+POSTGRES_URL_NON_POOLING="something"
+POSTGRES_USER="something"
+POSTGRES_HOST="something"
+POSTGRES_PASSWORD="something"
+POSTGRES_DATABASE="something"
 
 # Example:
 # SERVERVAR="foo"
