added authentication and image upload using upload thing

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,11 @@ POSTGRES_DATABASE="something"
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
+
+# clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=something
+CLERK_SECRET_KEY=something
+
+# uploadthing
+UPLOADTHING_SECRET=something
+UPLOADTHING_APP_ID=something
