--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,12 @@ CLERK_SECRET_KEY=something
 # uploadthing
 UPLOADTHING_SECRET=something
 UPLOADTHING_APP_ID=something
+
+
+# posthog anlytics
+NEXT_PUBLIC_POSTHOG_KEY=something
+NEXT_PUBLIC_POSTHOG_HOST=something
+
+# upstash ratelimit
+UPSTASH_REDIS_REST_URL="something"
+UPSTASH_REDIS_REST_TOKEN="something"
