--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "posthog-node": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
