--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.4",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.372.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
